stereo_dir = join_paths(theme_dir, 'stereo')

install_data(
  'alert_error-01.ogg',
  rename: 'dialog-error.ogg',
  install_dir: stereo_dir,
)

install_data(
  'alert_error-02.ogg',
  rename: 'dialog-warning.ogg',
  install_dir: stereo_dir,
)

install_data(
  'alert_high-intensity.ogg',
  rename: 'window-attention.ogg',
  install_dir: stereo_dir,
)

install_data(
  'hero_decorative-celebration-02.ogg',
  rename: 'desktop-login.ogg',
  install_dir: stereo_dir,
)

install_data(
  'hero_decorative-celebration-02.ogg',
  rename: 'system-bootup.ogg',
  install_dir: stereo_dir,
)

install_data(
  'navigation_hover-tap.ogg',
  rename: 'audio-volume-change.ogg',
  install_dir: stereo_dir,
)

install_data(
  'navigation_selection-complete-celebration.ogg',
  rename: 'trash-empty.ogg',
  install_dir: stereo_dir,
)

install_data(
  'notification_high-intensity.ogg',
  rename: 'message-new-instant.ogg',
  install_dir: stereo_dir,
)

install_data(
  'notification_simple-01.ogg',
  rename: 'window-question.ogg',
  install_dir: stereo_dir,
)

install_data(
  'ringtone_minimal.ogg',
  rename: 'alarm-clock-elapsed.ogg',
  install_dir: stereo_dir,
)

install_data(
  'state-change_confirm-down.ogg',
  rename: 'device-added.ogg',
  install_dir: stereo_dir,
)

install_data(
  'state-change_confirm-up.ogg',
  rename: 'device-removed.ogg',
  install_dir: stereo_dir,
)

install_data(
  'ui_camera-shutter.ogg',
  rename: 'camera-shutter.ogg',
  install_dir: stereo_dir,
)

install_data(
  'ui_camera-shutter.ogg',
  rename: 'screen-capture.ogg',
  install_dir: stereo_dir,
)
