stereo_dir = join_paths(theme_dir, 'stereo')

# Sound names need to be renamed according to the spec, with the extension ".oga".
# https://specifications.freedesktop.org/sound-naming-spec/sound-naming-spec-latest.html

install_data(
  'alert_error-01.ogg',
  rename: 'dialog-error.oga',
  install_dir: stereo_dir,
)

install_data(
  'alert_error-02.ogg',
  rename: 'dialog-warning.oga',
  install_dir: stereo_dir,
)

install_data(
  'alert_high-intensity.ogg',
  rename: 'window-attention.oga',
  install_dir: stereo_dir,
)

install_data(
  'hero_decorative-celebration-02.ogg',
  rename: 'desktop-login.oga',
  install_dir: stereo_dir,
)

install_data(
  'hero_decorative-celebration-02.ogg',
  rename: 'system-bootup.oga',
  install_dir: stereo_dir,
)

install_data(
  'navigation_hover-tap.ogg',
  rename: 'audio-volume-change.oga',
  install_dir: stereo_dir,
)

install_data(
  'navigation_selection-complete-celebration.ogg',
  rename: 'trash-empty.oga',
  install_dir: stereo_dir,
)

install_data(
  'notification_high-intensity.ogg',
  rename: 'message-new-instant.oga',
  install_dir: stereo_dir,
)

install_data(
  'notification_simple-01.ogg',
  rename: 'window-question.oga',
  install_dir: stereo_dir,
)

install_data(
  'ringtone_minimal.ogg',
  rename: 'alarm-clock-elapsed.oga',
  install_dir: stereo_dir,
)

install_data(
  'state-change_confirm-down.ogg',
  rename: 'device-removed.oga',
  install_dir: stereo_dir,
)

install_data(
  'state-change_confirm-up.ogg',
  rename: 'device-added.oga',
  install_dir: stereo_dir,
)

install_data(
  'ui_camera-shutter.ogg',
  rename: 'camera-shutter.oga',
  install_dir: stereo_dir,
)

install_data(
  'ui_camera-shutter.ogg',
  rename: 'screen-capture.oga',
  install_dir: stereo_dir,
)
